fix: job card overflow

--- a/src/components/jobs/JobCard/JobCard.module.scss
+++ b/src/components/jobs/JobCard/JobCard.module.scss
@@ -1,7 +1,6 @@
 .card {
   height: 100%;
   width: 100%;
-  overflow: unset;
 }
 
 .content {
